# mpham-chess

./: .clang-tidy  .pre-commit-config.yaml  CMakeLists.txt  README.md  configure.sh  shell.nix
include/detail/: common.hpp  fixed_vector.hpp  nttp_string.hpp
include/mpham_chess/: attacks.hpp  bitboard.hpp  board.hpp  constants.hpp  enums.hpp  move.hpp  movegen.hpp  movelist.hpp  perft.hpp  rng.hpp  utils.hpp  zobrist.hpp
src/: CMakeLists.txt  board.cpp  main.cpp  move.cpp
tests/: CMakeLists.txt  andygrant_ethereal_chess960.cpp  chess_programming_wiki.cpp  generate_test_cases.py  parse_fen.cpp  roce_testsuite.cpp
